small conclusion added to the recommendation engine notebook

--- a/Notebooks/recommendation_engine.ipynb
+++ b/Notebooks/recommendation_engine.ipynb
@@ -994,6 +994,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "We have gone over, in details, all of the steps of our recommendation engine:\n",
+    " - create a weighted graph and then calculate the shortest distance from each movie to all other movies\n",
+    " - shorten the distances based on IMDb ratings\n",
+    " - Handle movies that don't have any/enough links\n",
+    "\n",
+    "Then for each movie the recommendation engine will recommend the x (you can choose how many) movies that have the shortest path to the inputted movie."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
