--- a/Notebooks/Manuscripts_analysis.ipynb
+++ b/Notebooks/Manuscripts_analysis.ipynb
@@ -32,7 +32,7 @@
     "  - What directors direct the 'happiest' movies on average and what directors direct 'unhappiest' movies on average?\n",
     "  - Use TF/IDF to figure out what words are important for each genre and then visualize that in a wordcloud.\n",
     "  \n",
-    "  **Note:**  Happiness rank means the mean sentiment value of the manuscript"
+    "  **Note:**  Happiness rank means the mean sentiment value/score of the manuscript"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
     "\n",
-    "filepath = \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/tmdb-5000-movie-dataset/tmdb_5000_credits.csv\"\n",
+    "filepath = r\"tmdb_5000_credits.csv\"\n",
     "tmdb_5000_credits = defaultdict(dict)\n",
     "\n",
     "with open(filepath) as csvfile:\n",
@@ -102,7 +102,7 @@
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
     "\n",
-    "filepath = \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/tmdb-5000-movie-dataset/tmdb_5000_movies.csv\"\n",
+    "filepath = r\"tmdb_5000_movies.csv\"\n",
     "tmdb_5000_movies = defaultdict(dict)\n",
     "\n",
     "with open(filepath) as csvfile:\n",
@@ -179,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "filepath_scripts =  \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/scripts/\"\n",
+    "filepath_scripts =  \"scripts/\"\n",
     "\n",
     "\n",
     "# A python dictionary that maintains the information what movie has a manuscript in our database\n",
@@ -318,7 +318,7 @@
     "counter = 0\n",
     "\n",
     "happyness_rank = defaultdict(float)\n",
-    "path = '/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/Data_Set_S1.txt'\n",
+    "path = 'Data_Set_S1.txt'\n",
     "with open(path) as f:\n",
     "    for line in f:\n",
     "        counter += 1\n",
@@ -383,7 +383,7 @@
    },
    "outputs": [],
    "source": [
-    "filepath_scripts =  \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/scripts/\"\n",
+    "filepath_scripts =  \"scripts/\"\n",
     "\n",
     "\n",
     "happiness_keys = set(happyness_rank.keys())\n",
