references added to the explainer notebook , modifications on the basic dataset stats

--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -347,7 +347,12 @@
     "\n",
     "http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2 - Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter\n",
     "\n",
-    "http://barabasi.com/networksciencebook/ - Network Science by Albert-László-Barabási"
+    "http://barabasi.com/networksciencebook/ - Network Science by Albert-László-Barabási\n",
+    "\n",
+    "http://www.imsdb.com/ - The Internet Movie Script Database (IMSDb)\n",
+    "\n",
+    "http://www.imdb.com/ - The Internet Movie Database (IMDb)\n",
+    "\n"
    ]
   }
  ],
