info about each dataset added to the website

--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -352,6 +352,8 @@
     "http://www.imsdb.com/ - The Internet Movie Script Database (IMSDb)\n",
     "\n",
     "http://www.imdb.com/ - The Internet Movie Database (IMDb)\n",
+    "\n",
+    "https://www.themoviedb.org  - The movie database\n",
     "\n"
    ]
   }
