--- a/Notebooks/Manuscripts_analysis.ipynb
+++ b/Notebooks/Manuscripts_analysis.ipynb
@@ -297,7 +297,7 @@
    "source": [
     "# Sentiment Analysis\n",
     "\n",
-    "Now we have the scripts ready to do our sentiment analysis of the manuscripts. The first thing that is done is to get the happyness rank from the LabMT wordlist.  It's available as supplementary material from Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter (Data Set S1).\n",
+    "Now we have the scripts ready to do our sentiment analysis of the manuscripts. The first thing that is done is to get the happiness rank from the LabMT wordlist.  It's available as supplementary material from Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter (Data Set S1).\n",
     "\n",
     "We start of by getting the average happiness of each word in Data set S1 into a dictionary. We do this by reading the dataset line by line and put each line (except the first 4 lines) into a dictionary.\n",
     "\n",
