--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "In the following section we will discuss each dataset that we found, how we manage to gather it and what the purpose behind it was. \n",
     "\n",
+    "**NOTE** All of the analysis we do are limited in the sense that we only have information about 5000 movies, therefore the result cannot be taken as the whole truth. However, these analysis still gives us a good idea of the behavior.\n",
     "\n",
     "## Basic stats\n",
     "\n",
