--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -206,7 +206,7 @@
     "     - We plotted the sentimental score of the movies against the IMDb rating of said movie and check if there is any correlation.\n",
     "     - Lastly we analysed the correlation of the sentimental score of a review and the reviewer's rating of the movie, in this part we will use all reviews that have a rating (50.000 reviews).\n",
     "\n",
-    "** Note ** Sentiment score is the same as happyness score which is the same as mean sentiment value. It is important to have this in mind when you go over the analysis in the notebooks.\n",
+    "** Note ** Sentiment score is the same as happiness score which is the same as mean sentiment value. It is important to have this in mind when you go over the analysis in the notebooks.\n",
     "\n",
     "** Recommendation engine ** - [recommendation_engine notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/recommendation_engine.ipynb)\n",
     "\n",
