--- a/Notebooks/recommendation_engine.ipynb
+++ b/Notebooks/recommendation_engine.ipynb
@@ -227,7 +227,7 @@
     "\n",
     "There were some things we kept in mind though. Firstly, note that the sum of the dimension varibles can at maximum have the value of 1. Next when looking at the importance coefficent, one can observe that none of them has a value greater than 0.3. This forces our network to make a connection only if at least two dimension variables are shared. \n",
     "\n",
-    "Next when assigning a weight to the edge we subtract both the sum of the varibles which satisfied the constraint and the similarities between the movies with 1. This way, movies that have similar keywords, genre, actors, directors and storylines are closer in the network. \n",
+    "Next when assigning a weight to the edge we subtract both the sum of the varibles which satisfied the constraint and the similarities between the movies with 1.4 (so we don't get any negative weights). This way, movies that have similar keywords, genre, actors, directors and storylines are closer in the network. \n",
     "\n",
     "Note that we use the similarity between storylines only in deciding on the weight of the edge. The reason for this is that altough the movies might have similar storylines the movies could be very different. For example a romance and a horrors story might connect, depending on the language used in the storyline on IMDB. Furthermore, there exists only so few  [storylines]( https://en.wikipedia.org/wiki/The_Seven_Basic_Plots).\n",
     "\n",
