some changes in the recommendation engine part

--- a/Notebooks/recommendation_engine.ipynb
+++ b/Notebooks/recommendation_engine.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -101,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
-    "filepath = r\"tmdb_5000_credits.csv\"\n",
+    "filepath = \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/tmdb-5000-movie-dataset/tmdb_5000_credits.csv\"\n",
     "tmdb_5000_credits = defaultdict(dict)\n",
     "\n",
     "with open(filepath) as csvfile:\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
     "\n",
-    "filepath = r\"tmdb_5000_movies.csv\"\n",
+    "filepath = \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/tmdb-5000-movie-dataset/tmdb_5000_movies.csv\"\n",
     "tmdb_5000_movies = defaultdict(dict)\n",
     "\n",
     "with open(filepath) as csvfile:\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -580,7 +580,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyze Python-Louvain communities and modularity"
+    "### Analyze Python-Louvain communities and modularity\n",
+    "\n",
+    "**Modularity** is a measurement that allows us to quantify the goodness of a partition of a network into communities, where partition is a division of a network into an arbitrary number of groups such that each node belongs to one and only one group. More specifically, Modularity is a concept that measures systematic deviations from a random configuration of a network. This helps us indentifying groups that are embedded in a network, and finding nodes that interact more frequantly with each other than in a random network. Therefore modularity is simply a measurement of the systematic deviations from a random configuration. Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules\n",
+    "\n",
+    "We only analyse the communities of the giant component in our network because it simplifies the analysis and the movies that do not connect to any other movies skews the result. "
    ]
   },
   {
