some changes made

--- a/Notebooks/Networks.ipynb
+++ b/Notebooks/Networks.ipynb
@@ -445,7 +445,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyze Python-Louvain communities and modularity"
+    "### Analyze Python-Louvain communities and modularity\n",
+    "\n",
+    "**Modularity** is a measurement that allows us to quantify the goodness of a partition of a network into communities, where partition is a division of a network into an arbitrary number of groups such that each node belongs to one and only one group. More specifically, Modularity is a concept that measures systematic deviations from a random configuration of a network. This helps us indentifying groups that are embedded in a network, and finding nodes that interact more frequantly with each other than in a random network. Therefore modularity is simply a measurement of the systematic deviations from a random configuration. Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules\n"
    ]
   },
   {
