--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -245,6 +245,9 @@
     "\n",
     "**Clustering coefficient: ** The degree of a node contains no information about the relationship between a node's neighbors. Do they all know each other, or are they perhaps isolated from each other? The answer is provided by the local clustering coefficient $C_i$, that measures the density of links in node i's immediate neighborhood: $C_i$ = 0 means that there are no links between i's neighbors; $C_i$ = 1 implies that each of the i's neighbors link to each other. From [Network Science Book](http://barabasi.com/networksciencebook/chapter/3#clustering-3-9).\n",
     "\n",
+    "**Modularity** is a measurement that allows us to quantify the goodness of a partition of a network into communities, where partition is a division of a network into an arbitrary number of groups such that each node belongs to one and only one group. More specifically, Modularity is a concept that measures systematic deviations from a random configuration of a network. This helps us indentifying groups that are embedded in a network, and finding nodes that interact more frequantly with each other than in a random network. Therefore modularity is simply a measurement of the systematic deviations from a random configuration. Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules. \n",
+    "We used the [Python Louvain-algorithm](http://perso.crans.org/aynaud/communities/) implementation to find communities in our networks. We then compared the communities of the network found by the algorithm to the genres of the movies. \n",
+    "\n",
     "### Applications\n",
     "\n",
     "** Networks ** - [Networks notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Networks.ipynb)\n",
@@ -355,6 +358,8 @@
     "http://www.imdb.com/ - The Internet Movie Database (IMDb)\n",
     "\n",
     "https://www.themoviedb.org  - The movie database\n",
+    "\n",
+    "http://perso.crans.org/aynaud/communities/ - Python Louvain algorithm\n",
     "\n"
    ]
   }
@@ -362,21 +367,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:py35]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-py35-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
