--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -345,22 +345,21 @@
    "source": [
     "# References\n",
     "\n",
-    "https://en.wikipedia.org/wiki/Tf%E2%80%93idf - tf–idf wikipedia page\n",
+    "* **Network Science, Albert-László Barabási**, http://barabasi.com/networksciencebook/\n",
     "\n",
-    "https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm - Dijkstra's algorithm wikipedia page\n",
+    "* **tf–idf wikipedia page**, https://en.wikipedia.org/wiki/Tf%E2%80%93idf\n",
     "\n",
-    "http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2 - Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter\n",
+    "* **Dijkstra's algorithm wikipedia page**, https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm\n",
     "\n",
-    "http://barabasi.com/networksciencebook/ - Network Science by Albert-László-Barabási\n",
+    "* **Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter**, http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2\n",
     "\n",
-    "http://www.imsdb.com/ - The Internet Movie Script Database (IMSDb)\n",
+    "* **The Internet Movie Script Database (IMSDb)**, http://www.imsdb.com/\n",
     "\n",
-    "http://www.imdb.com/ - The Internet Movie Database (IMDb)\n",
+    "* **The Internet Movie Database (IMDb)**, http://www.imdb.com/\n",
     "\n",
-    "https://www.themoviedb.org  - The movie database\n",
+    "* **The movie database**, https://www.themoviedb.org \n",
     "\n",
-    "http://perso.crans.org/aynaud/communities/ - Python Louvain algorithm\n",
-    "\n"
+    "* **Python Louvain algorithm**, http://perso.crans.org/aynaud/communities/\n"
    ]
   }
  ],
