--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -166,11 +166,11 @@
     "\n",
     "### Tools\n",
     "\n",
-    "**Sentiment analysis:** We used the happyness rank from the LabMT wordlist to analyze the sentiment value for each manuscript. It's available as supplementary material from Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter (Data Set S1). It can be accessed on [this link](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2). The article has information about how the sentiment value is calculated for a text and how the dataset was created. \n",
+    "**Sentiment analysis:** We used the happyness rank from the LabMT wordlist to analyze the sentiment value for each manuscript. It's available as supplementary material from Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter (Data Set S1). It can be accessed on [this link](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2). The article has information about how the sentiment value is calculated for a text and how the dataset was created. [4] \n",
     "\n",
     "We calculated the sentiment score in two different analysis. Firstly in the manuscript analysis where we analyzed the sentiment score of the manuscripts and in the review analysis where we analysed the sentiment scores of the movies' reviews.\n",
     "\n",
-    "**TF-IDF: ** The TF-IDF (Term Frequency - Inverse Document Frequency) is a numerical statistic of how important a word is to a document in a collection or a corpus. It is calculated by calculating the frequency of occurrences of a word in a text multiplied with the inverse document frequency which gives lower scores to words that frequently occur in other texts in the corpus as well. In other words, TF-IDF is an indicator of how important/special a word is actually in a text, giving high scores to the words that differentiates it from other texts. \n",
+    "**TF-IDF: ** The TF-IDF (Term Frequency - Inverse Document Frequency) is a numerical statistic of how important a word is to a document in a collection or a corpus. It is calculated by calculating the frequency of occurrences of a word in a text multiplied with the inverse document frequency which gives lower scores to words that frequently occur in other texts in the corpus as well. In other words, TF-IDF is an indicator of how important/special a word is actually in a text, giving high scores to the words that differentiates it from other texts. [2] \n",
     "\n",
     "We used TF-IDF in two different analysis; First in the **manuscripts analysis** where we calculated the TF-IDF vector for each movie genre and we used that to make wordclouds which correlated the TF-IDF score of a word with the size of the word in the wordcloud. Secondly, we calculated the TF-IDF for each movie's **IMDb storyline**. We the used the resulting vectors to calculate the cosine similarity measurement between the movies' storylines and we used that as a variable into our recommendation engine like we will go over in the 'Recommendation Engine' section.\n",
     "\n",
@@ -239,14 +239,14 @@
     "\n",
     "### Tools\n",
     "\n",
-    "**Betweenness centrality: ** In a traditional setting, this measure calculates all shortest paths in the network and then each node gets a score according to which fraction of all shortest paths pass through that node. By calculating the betweenness centrality in our network we can find the biggest hubs.\n",
+    "**Betweenness centrality: ** In a traditional setting, this measure calculates all shortest paths in the network and then each node gets a score according to which fraction of all shortest paths pass through that node. By calculating the betweenness centrality in our network we can find the biggest hubs. [1]\n",
     "\n",
-    "**Degree distribution: ** Is the probability that a randomly chosen node has a certain degree. In a given realization of a random network some nodes gain numerous links, while others acquire only a few or no links. By looking at the degree distribution we can get an idea of how the network is structured. For example is it scale-free or perhaps a random network. There is more on degree distribution in the [Network Science Book](http://barabasi.com/networksciencebook/chapter/3#degree-distribution).\n",
+    "**Degree distribution: ** Is the probability that a randomly chosen node has a certain degree. In a given realization of a random network some nodes gain numerous links, while others acquire only a few or no links. By looking at the degree distribution we can get an idea of how the network is structured. For example is it scale-free or perhaps a random network. There is more on degree distribution in the [Network Science Book](http://barabasi.com/networksciencebook/chapter/3#degree-distribution). [1]\n",
     "\n",
-    "**Clustering coefficient: ** The degree of a node contains no information about the relationship between a node's neighbors. Do they all know each other, or are they perhaps isolated from each other? The answer is provided by the local clustering coefficient $C_i$, that measures the density of links in node i's immediate neighborhood: $C_i$ = 0 means that there are no links between i's neighbors; $C_i$ = 1 implies that each of the i's neighbors link to each other. From [Network Science Book](http://barabasi.com/networksciencebook/chapter/3#clustering-3-9).\n",
+    "**Clustering coefficient: ** The degree of a node contains no information about the relationship between a node's neighbors. Do they all know each other, or are they perhaps isolated from each other? The answer is provided by the local clustering coefficient $C_i$, that measures the density of links in node i's immediate neighborhood: $C_i$ = 0 means that there are no links between i's neighbors; $C_i$ = 1 implies that each of the i's neighbors link to each other. [1]\n",
     "\n",
     "**Modularity** is a measurement that allows us to quantify the goodness of a partition of a network into communities, where partition is a division of a network into an arbitrary number of groups such that each node belongs to one and only one group. More specifically, Modularity is a concept that measures systematic deviations from a random configuration of a network. This helps us indentifying groups that are embedded in a network, and finding nodes that interact more frequantly with each other than in a random network. Therefore modularity is simply a measurement of the systematic deviations from a random configuration. Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules. \n",
-    "We used the [Python Louvain-algorithm](http://perso.crans.org/aynaud/communities/) implementation to find communities in our networks. We then compared the communities of the network found by the algorithm to the genres of the movies. \n",
+    "We used the [Python Louvain-algorithm](http://perso.crans.org/aynaud/communities/) implementation to find communities in our networks. We then compared the communities of the network found by the algorithm to the genres of the movies. [1] [5] \n",
     "\n",
     "### Applications\n",
     "\n",
@@ -286,9 +286,9 @@
     "\n",
     "Here we used the same tools as in the 'Networks' section with the addition of **Djikstra shortest path** and **TF-IDF**.\n",
     "\n",
-    "**Djikstra shortest path: ** The algorithm creates a tree of shortest paths from the starting vertex, the source, to all other points in the graph.\n",
+    "**Djikstra shortest path: ** The algorithm creates a tree of shortest paths from the starting vertex, the source, to all other points in the graph. [3]\n",
     "\n",
-    "**TF-IDF: ** The TF-IDF (Term Frequency - Inverse Document Frequency) is a numerical statistic of how important a word is to a document in a collection or a corpus. It is calculated by calculating the frequency of occurrences of a word in a text multiplied with the inverse document frequency which gives lower scores to words that frequently occur in other texts in the corpus as well. In other words, TF-IDF is an indicator of how important/special a word is actually in a text, giving high scores to the words that differentiates it from other texts. We calculated the TF-IDF for each movie's **IMDb storyline**. We the used the resulting vectors to calculate the cosine similarity measurement between the movie's storyline and we used that as a variable into our recommendation engine.\n",
+    "**TF-IDF: ** The TF-IDF (Term Frequency - Inverse Document Frequency) is a numerical statistic of how important a word is to a document in a collection or a corpus. It is calculated by calculating the frequency of occurrences of a word in a text multiplied with the inverse document frequency which gives lower scores to words that frequently occur in other texts in the corpus as well. In other words, TF-IDF is an indicator of how important/special a word is actually in a text, giving high scores to the words that differentiates it from other texts. We calculated the TF-IDF for each movie's **IMDb storyline**. We the used the resulting vectors to calculate the cosine similarity measurement between the movie's storyline and we used that as a variable into our recommendation engine. [2]\n",
     "\n",
     "### Applications\n",
     "\n",
@@ -345,21 +345,15 @@
    "source": [
     "# References\n",
     "\n",
-    "* **Network Science, Albert-László Barabási**, http://barabasi.com/networksciencebook/\n",
+    "[1] **Network Science, Albert-László Barabási**, http://barabasi.com/networksciencebook/. [Accessed 4 December 2017].\n",
     "\n",
-    "* **tf–idf wikipedia page**, https://en.wikipedia.org/wiki/Tf%E2%80%93idf\n",
+    "[2] wikipedia. **tf-idf**, [ONLINE] Available at: https://en.wikipedia.org/wiki/Tf%E2%80%93idf. [Accessed 4 December 2017].\n",
     "\n",
-    "* **Dijkstra's algorithm wikipedia page**, https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm\n",
+    "[3] wikipedia. **Dijkstra's algorithm.**, [ONLINE] Available at: https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm. [Accessed 4 December 2017].\n",
     "\n",
-    "* **Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter**, http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2\n",
+    "[4] **Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter**, Dodds PS, Harris KD, Kloumann IM, Bliss CA, Danforth CM (2011), [ONLINE] Available at: http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2. [Accessed 4 December 2017].\n",
     "\n",
-    "* **The Internet Movie Script Database (IMSDb)**, http://www.imsdb.com/\n",
-    "\n",
-    "* **The Internet Movie Database (IMDb)**, http://www.imdb.com/\n",
-    "\n",
-    "* **The movie database**, https://www.themoviedb.org \n",
-    "\n",
-    "* **Python Louvain algorithm**, http://perso.crans.org/aynaud/communities/\n"
+    "[5] **Python Louvain algorithm**, [ONLINE] Available at: http://perso.crans.org/aynaud/communities/. [Accessed 4 December 2017]."
    ]
   }
  ],
